syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;

option go_package = "github.com/MKKL1/schematic-app/server/internal/pkg/genproto";

service TagService {
  rpc CreateCategoryVars(CreateCategoryVarsParams) returns (google.protobuf.Empty) {}
}

message CreateCategoryVarsParams {
  int64 post_id = 1;
  int64 category_id = 2;
  bytes values = 3;
}